--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -87,6 +87,7 @@ body{
 header{
     background-color: var(--header-bg-color);
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
 }
@@ -109,9 +110,11 @@ main{
     width: 100%;
     display: flex;
     flex: 1;
+    position: relative;
 }
 
 #sidebar{
+    position: relative;
     padding: 35px 25px 75px 25px;
     background-color: var(--sidebar-bg-color);
     width: 350px;
@@ -445,6 +448,38 @@ main{
     font-size: 1.2rem;
 }
 
+.burger-menu
+{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    gap: 6px;
+    align-items: center;
+    cursor: pointer;
+    width: 30px;
+    height: 60px;
+}
+
+.burger-menu > .line
+{
+    background-color: white;
+    width: 100%;
+    height: 3px;
+    flex-shrink: 0;
+    border-radius: 1rem;
+}
+
+#closeSidebar
+{
+    display: none;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    opacity: 0;
+}
+
 footer{
     width: 100%;
     display: flex;
@@ -455,4 +490,72 @@ footer{
     font-family: var(--footer-font);
     color: var(--footer-font-color);
     background-color: var(--footer-bg-color);
+}
+
+
+/* MEDIA QUERIES */
+
+/* 2xl */
+@media (max-width: 1536px) 
+{
+
+}
+
+/* xl */
+@media (max-width: 1280px) 
+{
+
+}
+
+/* lg */
+@media (max-width: 1024px) 
+{
+
+}
+
+@media (max-width: 880px) 
+{
+    #sidebar
+    {
+        position: fixed;
+        height: 100%;
+        z-index: 5;
+        transform: translateX(-650px);
+    }
+
+    .burger-menu
+    {
+        display: flex;
+    }
+
+    #closeSidebar
+    {
+        display: flex;
+    }
+
+}
+
+/* md */
+@media (max-width: 768px) 
+{
+
+}
+
+/* sm */
+@media (max-width: 640px) 
+{
+
+}
+
+/* xs */
+@media (max-width: 545px) 
+{
+    #sidebar{
+        width: 100%;
+    }
+
+    .add-form{
+        width: 95%;
+        
+    }
 }
