--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -189,6 +189,11 @@ main{
     margin-right: auto;
 }
 
+.projects-selections > li.active-project
+{
+    background-color: var(--todo-selections-bg-color-active);
+}
+
 #addProjectBtn{
     width: 100%;
     height: 40px;
